app/backend-src/k8s/Deployment.yml
# app/backend-src/k8s/Deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsapideployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      name: products
      labels:
        app: products
    spec:
      containers:
        - name: productscontainer
          image: ${ECR_IMAGE_URI}   # <-- placeholder for dynamic substitution
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productssvc
spec:
  type: LoadBalancer
  selector:
    app: products
  ports:
    - port: 80
      targetPort: 8080
